Fix caption spacing for inline notifications

--- a/public/css/_cp-inline-notification.scss
+++ b/public/css/_cp-inline-notification.scss
@@ -10,10 +10,10 @@
   min-width: 250px;
   .caption {
     position: relative;
-    top: 0.1rem;
     font-size: 1.3rem;
     font-weight: 300;
     margin-bottom: 0.5rem;
+    margin-left: 2.4rem;
   }
   .message {
     position: relative;
